@@ -1,3 +1,4 @@
+Show tooltips on camera so they don't scale with zoom level
 Added tooltips for specific events
 Made yellow (system) events wider and always behind black (user) events
 Added plots for events and unique events
